// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Popover Button as a trigger - Right aligned 1`] = `
.c1 {
  position: relative;
}

.c2 {
  -webkit-transition: visibility 0s linear 0.1s,opacity 0.1s linear;
  transition: visibility 0s linear 0.1s,opacity 0.1s linear;
  visibility: hidden;
  opacity: 0;
  position: absolute;
  z-index: 1000;
  top: 15px;
  padding: 8px;
  background-color: #ffffff;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16);
  border: solid 1px rgba(0,0,0,0.16);
  border-radius: 4px;
  white-space: pre;
  color: #2f313a;
  font-family: lato,sans-serif;
  right: 0;
}

.c3 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  color: #2f313a;
  text-align: left;
}

.c0 {
  display: inline-block;
}

<div
  style={
    Object {
      "textAlign": "right",
      "width": 300,
    }
  }
>
  <div
    className="c0"
  >
    <div
      id="trigger"
      onClick={[Function]}
    >
      <button>
        Trigger
      </button>
    </div>
    <div
      className="c1"
    >
      <div
        className="c2"
      >
        <div
          className="c3"
          size={18}
          type="#2f313a"
        >
          Popover content
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Popover Center aligned 1`] = `
.c3 {
  position: relative;
}

.c4 {
  -webkit-transition: visibility 0s linear 0.1s,opacity 0.1s linear;
  transition: visibility 0s linear 0.1s,opacity 0.1s linear;
  visibility: hidden;
  opacity: 0;
  position: absolute;
  z-index: 1000;
  top: 15px;
  padding: 8px;
  background-color: #ffffff;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16);
  border: solid 1px rgba(0,0,0,0.16);
  border-radius: 4px;
  white-space: pre;
  color: #2f313a;
  font-family: lato,sans-serif;
  left: 50%;
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
}

.c1 {
  display: inline-block;
}

.c1 .hitWrapper {
  position: relative;
}

.c1 .hitWrapper .hit {
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%;
}

.c2 {
  font-family: Lato,sans-serif;
  display: inline-block;
  position: relative;
  font-size: 16px;
  font-weight: 600;
  line-height: 1;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  cursor: pointer;
  color: #3498db;
}

.c2 > i.margin-left {
  margin-left: 8px;
}

.c2 > i.margin-right {
  margin-right: 8px;
}

.c2 > a {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2 > a:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c2 > a {
  color: inherit;
}

.c2:hover {
  color: #2980b9;
}

.c5 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  color: #2f313a;
  text-align: left;
}

.c0 {
  display: inline-block;
}

<div
  style={
    Object {
      "textAlign": "right",
      "width": 300,
    }
  }
>
  <div
    className="c0"
  >
    <div
      id="trigger"
      onClick={[Function]}
    >
      <div
        className="c1"
      >
        <div
          className="hitWrapper"
        >
          <div
            className="c2"
            disabled={false}
            onMouseLeave={[Function]}
            onMouseOver={[Function]}
            size={16}
            type="#3498db"
          >
            <span>
              Trigger
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      className="c3"
    >
      <div
        className="c4"
      >
        <div
          className="c5"
          size={18}
          type="#2f313a"
        >
          Centered Popover
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Popover Custom padding 1`] = `
.c1 {
  position: relative;
}

.c2 {
  -webkit-transition: visibility 0s linear 0.1s,opacity 0.1s linear;
  transition: visibility 0s linear 0.1s,opacity 0.1s linear;
  visibility: hidden;
  opacity: 0;
  position: absolute;
  z-index: 1000;
  top: 15px;
  padding: 8px;
  background-color: #ffffff;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16);
  border: solid 1px rgba(0,0,0,0.16);
  border-radius: 4px;
  white-space: pre;
  color: #2f313a;
  font-family: lato,sans-serif;
  left: 0;
}

.c3 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  color: #2f313a;
  text-align: left;
}

.c0 {
  display: inline-block;
}

<div
  className="c0"
>
  <div
    id="trigger"
    onClick={[Function]}
  >
    <button>
      Trigger
    </button>
  </div>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div>
        <div
          className="c3"
          size={18}
          type="#2f313a"
        >
          Popover content
        </div>
        <button
          onClick={[Function]}
        >
          Dismiss
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Popover Default - Link as a trigger 1`] = `
.c3 {
  position: relative;
}

.c4 {
  -webkit-transition: visibility 0s linear 0.1s,opacity 0.1s linear;
  transition: visibility 0s linear 0.1s,opacity 0.1s linear;
  visibility: hidden;
  opacity: 0;
  position: absolute;
  z-index: 1000;
  top: 15px;
  padding: 8px;
  background-color: #ffffff;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16);
  border: solid 1px rgba(0,0,0,0.16);
  border-radius: 4px;
  white-space: pre;
  color: #2f313a;
  font-family: lato,sans-serif;
  left: 0;
}

.c1 {
  display: inline-block;
}

.c1 .hitWrapper {
  position: relative;
}

.c1 .hitWrapper .hit {
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%;
}

.c2 {
  font-family: Lato,sans-serif;
  display: inline-block;
  position: relative;
  font-size: 16px;
  font-weight: 600;
  line-height: 1;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  cursor: pointer;
  color: #3498db;
}

.c2 > i.margin-left {
  margin-left: 8px;
}

.c2 > i.margin-right {
  margin-right: 8px;
}

.c2 > a {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2 > a:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c2 > a {
  color: inherit;
}

.c2:hover {
  color: #2980b9;
}

.c5 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  color: #2f313a;
  text-align: left;
}

.c0 {
  display: inline-block;
}

<div
  className="c0"
>
  <div
    id="trigger"
    onClick={[Function]}
  >
    <div
      className="c1"
    >
      <div
        className="hitWrapper"
      >
        <div
          className="c2"
          disabled={false}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          size={16}
          type="#3498db"
        >
          <span>
            Trigger
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    className="c3"
  >
    <div
      className="c4"
    >
      <div
        className="c5"
        size={18}
        type="#2f313a"
      >
        Popover content
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Popover Dismissable 1`] = `
.c3 {
  position: relative;
}

.c4 {
  -webkit-transition: visibility 0s linear 0.1s,opacity 0.1s linear;
  transition: visibility 0s linear 0.1s,opacity 0.1s linear;
  visibility: hidden;
  opacity: 0;
  position: absolute;
  z-index: 1000;
  top: 15px;
  padding: 8px;
  background-color: #ffffff;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16);
  border: solid 1px rgba(0,0,0,0.16);
  border-radius: 4px;
  white-space: pre;
  color: #2f313a;
  font-family: lato,sans-serif;
  left: 0;
}

.c1 {
  display: inline-block;
}

.c1 .hitWrapper {
  position: relative;
}

.c1 .hitWrapper .hit {
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%;
}

.c2 {
  font-family: Lato,sans-serif;
  display: inline-block;
  position: relative;
  font-size: 16px;
  font-weight: 600;
  line-height: 1;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  cursor: pointer;
  color: #3498db;
}

.c2 > i.margin-left {
  margin-left: 8px;
}

.c2 > i.margin-right {
  margin-right: 8px;
}

.c2 > a {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2 > a:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c2 > a {
  color: inherit;
}

.c2:hover {
  color: #2980b9;
}

.c5 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  color: #2f313a;
  text-align: left;
}

.c0 {
  display: inline-block;
}

<div
  className="c0"
>
  <div
    id="trigger"
    onClick={[Function]}
  >
    <div
      className="c1"
    >
      <div
        className="hitWrapper"
      >
        <div
          className="c2"
          disabled={false}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          size={16}
          type="#3498db"
        >
          <span>
            Trigger
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    className="c3"
  >
    <div
      className="c4"
    >
      <div>
        <div
          className="c5"
          size={18}
          type="#2f313a"
        >
          Popover content
        </div>
        <button
          onClick={[Function]}
        >
          Dismiss
        </button>
      </div>
    </div>
  </div>
</div>
`;
